# npass

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: crypto.rs  lib.rs  main.rs  store.rs
tests/: cli_backup.rs  cli_integration.rs  cli_set_overwrite.rs  integration_test.rs
