[package]
name = "npass"
version = "0.1.0"
edition = "2024"
description = "A small, simple password manager (set/get/rm/ls)"
license = "MIT"
repository = "https://github.com/snvshal/npass"
readme = "README.md"
keywords = ["password", "security", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
directories = "5"
rpassword = "7"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "npass"
path = "src/main.rs"
